Fixed an issue that does not work in native docker environment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - '24224:24224'
     volumes:
       - ./forwarder/:/fluentd/
+    depends_on:
+      - aggregator
 
   aggregator:
     build:
