--- a/forwarder/fluent.conf
+++ b/forwarder/fluent.conf
@@ -30,7 +30,7 @@
     tls_cert_path /fluentd/cert/ca_cert.pem
 
     <server>
-        host host.docker.internal
+        host aggregator
         port 24284
     </server>
 </match>
